2004-01-25 16:16  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSStringDrawing.m: Big redesign.

	(cache_match, cache_lookup_string, cache_lookup_attributed_string,
	use_screen_fonts): New helper functions for caching layout
	information.

	(init_string_drawing, [NSAttributedString -drawAtPoint:],
	[NSAttributedString -drawInRect:], [NSAttributedString -size],
	[NSString -drawAtPoint:withAttributes:],
	[NSString -drawInRect:withAttributes:],
	[NSString -sizeWithAttributes:]): Reimplement using the cache system
	and the new helper functions.

2004-01-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-orderWindow:relativeTo:): In OrderOut case
	cancle _handleWindowNeedsDisplay unconditional. (-close): Don't
	cancle _handleWindowNeedsDisplay as this gets done by the
	following [orderOut:] call. These changes adopt to a previous
	change in [_handeWindowNeedsDisplay:] to always resend itself.

2004-01-25 04:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-invalidateDisplayForCharacterRange:,
	-textStorage:edited:range:changeInLength:invalidatedRange:): Adjust
	a few edge cases so that no work is done if there is no existing
	layout information.

2004-01-24 15:17  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLink.h: Added ivars.
	* Source/NSDataLink.m: Added implementation of some methods.

2004-01-23 21:32  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removal of some commented out test code.

2004-01-22 13:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_initWithoutGModel): Use -setTitle: to set
	the titles of the buttons, not -setStringValue:. Patch from Matt
	Rice.

2004-01-22 13:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSButton.m: Rename _nsbuttonCellClass to buttonCellClass
	and make it static.

2004-01-22 13:06  Alexander Malmberg <alexander@malmberg.org>
